istio/mtls-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: telealert-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
