istio/telealert-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: telealert-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telealert-vs
spec:
  hosts:
    - "*"
  gateways:
    - telealert-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: telealert-api
            port:
              number: 5000
